--- a/tmux.conf
+++ b/tmux.conf
@@ -34,14 +34,14 @@ set -g status-fg white
 set-option -g base-index 1 #窗口的初始序号；默认为0，这里设置为1
 
 # set-option -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
-setw -g automatic-rename on
+# setw -g automatic-rename off
 set-window-option -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
 set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=cyan]#W#[fg=dim]'
 # set-option -g mouse-select-pane on
 set -g mouse on 
 set-option -g status-justify right
 
-# set-option -g allow-rename off
+set-option -g allow-rename off
 
 #set -g status-right ' #[fg=cyan,bold]*#[fg=magenta,bold]#S#[fg=cyan]* #[default]%Y-%m-%d'
 # set-option -g status-right-length 20
@@ -82,3 +82,11 @@ bind-key    -T root         ¬               last-window
 bind-key    -T root       M-p                 previous-window
 bind-key    -T root       M-n               next-window 
 bind-key    -T root       M-l               last-window 
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
