change zshPrompt; add local conf support

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,7 +49,7 @@ set -g status-right ' #[fg=magenta,bold]#S'
 # set-option -g status-right-length 20
 
 # set -g status-left "#{pane_current_path}"
-set -g status-left "#{pane_current_path}" 
+set -g status-left "#[fg=cyan]#h  #[default]#{pane_current_path} " 
 set-option -g status-left-length 50
 # setw -g window-status-format "#{pane_current_path}"
 
