add vim bracket autocomplete

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ unbind C-h
 bind -n C-l select-pane -R
 bind -n C-h select-pane -L
 bind -n C-u select-pane -U
-bind -n C-n select-pane -D
+# bind -n C-n select-pane -D
 
 #重新调整窗格的大小
 bind ^k resizep -U 5
