--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 #source '/Users/JoshuaD/Library/Python/3.6/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
 
+set -g default-terminal "xterm-256color"
+
 set -g prefix C-j
 setw -g mode-keys vi
 bind-key z kill-session
@@ -9,7 +11,7 @@ bind _ splitw -v #分割成上下两个窗口
 unbind %
 bind | splitw -h #分割成左右两个窗口
 
-# bind R source-file ~/.tmux.conf ; display-message "Config reloaded.." 
+bind R source-file ~/.tmux.conf ; display-message "Config reloaded.." 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
@@ -17,10 +19,14 @@ bind -n M-Down select-pane -D
 
 unbind C-l
 unbind C-h
-bind -n C-l select-pane -R
-bind -n C-h select-pane -L
-bind -n C-u select-pane -U
-# bind -n C-n select-pane -D
+# bind -n C-l select-pane -R
+# bind -n C-h select-pane -L
+# bind -n C-u select-pane -U
+# hjkl 选择窗口
+bind l select-pane -R
+bind h select-pane -L
+bind k select-pane -U
+bind j select-pane -D
 
 #重新调整窗格的大小
 bind ^k resizep -U 5
