configure tmux navigation

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,63 +1,59 @@
-#source '/Users/JoshuaD/Library/Python/3.6/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
-
 set -g default-terminal "xterm-256color"
 
 set -g prefix C-j
 setw -g mode-keys vi
 bind-key z kill-session
-
-unbind '"'
-bind _ splitw -v #分割成上下两个窗口
-unbind %
-bind | splitw -h #分割成左右两个窗口
-
 bind R source-file ~/.tmux.conf ; display-message "Config reloaded.." 
+set -g mouse on 
+
+# --------------------------------------- PANE ------------------------------------------
+unbind '"'
+bind _ splitw -v # vertical split with _
+unbind %
+bind | splitw -h # horizonal split with | 
+
+# select pane with alt+arrow 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# select pane with hjkl 
 unbind C-l
 unbind C-h
-# bind -n C-l select-pane -R
-# bind -n C-h select-pane -L
-# bind -n C-u select-pane -U
-# hjkl 选择窗口
 bind l select-pane -R
 bind h select-pane -L
 bind k select-pane -U
 bind j select-pane -D
 
 #重新调整窗格的大小
-bind ^k resizep -U 5
-bind ^j resizep -D 5
-bind ^h resizep -L 5
-bind ^l resizep -R 5
+bind ^k resizep -U 3
+bind ^j resizep -D 3
+bind ^h resizep -L 3
+bind ^l resizep -R 3
 
+# ----------------------------------- STATUS BAR -------------------------------------
+set-option -g status-justify right
+set -g status-right ' #[fg=magenta,bold]#S'
+set -g status-left "#[fg=cyan]#h #[default]#{pane_current_path} " 
+#set -g status-right ' #[fg=cyan,bold]*#[fg=magenta,bold]#S#[fg=cyan]* #[default]%Y-%m-%d'
 set -g status-bg black
 set -g status-fg white
-
-set-option -g base-index 1 #窗口的初始序号；默认为0，这里设置为1
-
-# set-option -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
-# setw -g automatic-rename off
+set-option -g status-left-length 100
 set-window-option -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
 set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=cyan]#W#[fg=dim]'
-# set-option -g mouse-select-pane on
-set -g mouse on 
-set-option -g status-justify right
 
+
+
+# ------------------------------------- WINDOW ------------------------------------
+unbind n 
+unbind l 
+# Use i <- and o -> to switch between windows 
+bind o next-window
+bind i previous-window 
+bind p last-window 
+set-option -g base-index 1 #窗口的初始序号；默认为0，这里设置为1
 set-option -g allow-rename off
-
-#set -g status-right ' #[fg=cyan,bold]*#[fg=magenta,bold]#S#[fg=cyan]* #[default]%Y-%m-%d'
-# set-option -g status-right-length 20
-set -g status-right ' #[fg=magenta,bold]#S'
-# set-option -g status-right-length 20
-
-# set -g status-left "#{pane_current_path}"
-set -g status-left "#[fg=cyan]#h #[default]#{pane_current_path} " 
-set-option -g status-left-length 100
-# setw -g window-status-format "#{pane_current_path}"
 
 bind-key    -T root       º                 select-window -t :=0
 bind-key    -T root       ¡                 select-window -t :=1
@@ -81,14 +77,7 @@ bind-key    -T root       M-7                 select-window -t :=7
 bind-key    -T root       M-8                 select-window -t :=8
 bind-key    -T root       M-9                 select-window -t :=9
 
-bind-key    -T root       π                 previous-window
-bind-key    -T root         ˜               next-window 
-bind-key    -T root         ¬               last-window 
-
-bind-key    -T root       M-p                 previous-window
-bind-key    -T root       M-n               next-window 
-bind-key    -T root       M-l               last-window 
-
+# ------------------------------ PLUGINS ------------------------------
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
