tmux pane window support ready

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-256color-italic"
+TERM=xterm-256color
 
-set -g prefix C-j
+set -g prefix C-b
 setw -g mode-keys vi
 bind-key z kill-session
 bind R source-file ~/.tmux.conf ; display-message "Config reloaded.." 
@@ -19,18 +20,15 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # select pane with hjkl 
-unbind C-l
-unbind C-h
-bind l select-pane -R
-bind h select-pane -L
-bind k select-pane -U
-bind j select-pane -D
+bind -n C-l select-pane -R
+bind -n C-h select-pane -L
+bind -n C-k select-pane -U
 
 #重新调整窗格的大小
-bind ^k resizep -U 3
-bind ^j resizep -D 3
-bind ^h resizep -L 3
-bind ^l resizep -R 3
+bind -r k resizep -U 3
+bind -r j resizep -D 3
+bind -r h resizep -L 5
+bind -r l resizep -R 5
 
 # ----------------------------------- STATUS BAR -------------------------------------
 set-option -g status-justify right
@@ -46,26 +44,12 @@ set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=cyan]#
 
 
 # ------------------------------------- WINDOW ------------------------------------
-unbind n 
-unbind l 
-# Use i <- and o -> to switch between windows 
-bind o next-window
-bind i previous-window 
-bind p last-window 
+bind -T root C-[ previous-window
+bind -T root C-] next-window 
 set-option -g base-index 1 #窗口的初始序号；默认为0，这里设置为1
 set-option -g allow-rename off
 
-bind-key    -T root       º                 select-window -t :=0
-bind-key    -T root       ¡                 select-window -t :=1
-bind-key    -T root       ™                 select-window -t :=2
-bind-key    -T root       £                 select-window -t :=3
-bind-key    -T root       ¢                 select-window -t :=4
-bind-key    -T root       ∞                 select-window -t :=5
-bind-key    -T root       §                 select-window -t :=6
-bind-key    -T root       ¶                 select-window -t :=7
-bind-key    -T root       •                 select-window -t :=8
-bind-key    -T root       ª                 select-window -t :=9
-
+# Alt+number to switch window 
 bind-key    -T root       M-0                 select-window -t :=0
 bind-key    -T root       M-1                 select-window -t :=1
 bind-key    -T root       M-2                 select-window -t :=2
@@ -76,6 +60,17 @@ bind-key    -T root       M-6                 select-window -t :=6
 bind-key    -T root       M-7                 select-window -t :=7
 bind-key    -T root       M-8                 select-window -t :=8
 bind-key    -T root       M-9                 select-window -t :=9
+# MacOS alt chars 
+bind-key    -T root       º                 select-window -t :=0
+bind-key    -T root       ¡                 select-window -t :=1
+bind-key    -T root       ™                 select-window -t :=2
+bind-key    -T root       £                 select-window -t :=3
+bind-key    -T root       ¢                 select-window -t :=4
+bind-key    -T root       ∞                 select-window -t :=5
+bind-key    -T root       §                 select-window -t :=6
+bind-key    -T root       ¶                 select-window -t :=7
+bind-key    -T root       •                 select-window -t :=8
+bind-key    -T root       ª                 select-window -t :=9
 
 # ------------------------------ PLUGINS ------------------------------
 # List of plugins
