patches and docs. group sublime files

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,9 @@
 set -g default-terminal "xterm-256color-italic"
 TERM=xterm-256color
 
-set -g prefix C-b
+set -g prefix C-j
 setw -g mode-keys vi
 bind-key z kill-session
-bind R source-file ~/.tmux.conf ; display-message "Config reloaded.." 
 set -g mouse on 
 
 # --------------------------------------- PANE ------------------------------------------
@@ -19,12 +18,12 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# select pane with hjkl 
+# use Ctrl-hkl to switch pane 
 bind -n C-l select-pane -R
 bind -n C-h select-pane -L
 bind -n C-k select-pane -U
 
-#重新调整窗格的大小
+# use prefix-hjkl to resize pane
 bind -r k resizep -U 3
 bind -r j resizep -D 3
 bind -r h resizep -L 5
@@ -46,10 +45,10 @@ set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=cyan]#
 # ------------------------------------- WINDOW ------------------------------------
 bind -T root C-[ previous-window
 bind -T root C-] next-window 
-set-option -g base-index 1 #窗口的初始序号；默认为0，这里设置为1
+set-option -g base-index 1      # change window index to grow from 1
 set-option -g allow-rename off
 
-# Alt+number to switch window 
+# Alt+number to switch to window 
 bind-key    -T root       M-0                 select-window -t :=0
 bind-key    -T root       M-1                 select-window -t :=1
 bind-key    -T root       M-2                 select-window -t :=2
