--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "xterm-256color-italic"
+set -ga terminal-overrides ",*256col*:Tc"
 TERM=xterm-256color
 
 set -g prefix C-j
