add several vim plugs integration

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,6 @@ bind -n M-Down select-pane -D
 
 # use Ctrl-hkl to switch pane 
 bind -n C-l select-pane -R
-bind -n C-h select-pane -L
 bind -n C-k select-pane -U
 
 # use prefix-hjkl to resize pane
@@ -44,8 +43,8 @@ set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=cyan]#
 
 
 # ------------------------------------- WINDOW ------------------------------------
-bind -T root C-[ previous-window
-bind -T root C-] next-window 
+bind -T root M-[ previous-window
+bind -T root M-] next-window 
 set-option -g base-index 1      # change window index to grow from 1
 set-option -g allow-rename off
 
