--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,8 @@ set -g default-terminal "xterm-256color-italic"
 set -ga terminal-overrides ",*256col*:Tc"
 TERM=xterm-256color
 
-set -g prefix C-j
+set -g prefix C-s
 setw -g mode-keys vi
-bind-key z kill-session
 set -g mouse on 
 
 # --------------------------------------- PANE ------------------------------------------
@@ -19,9 +18,11 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# use Ctrl-hkl to switch pane 
-bind -n C-l select-pane -R
+# use Ctrl-hjkl to switch pane 
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
 bind -n C-k select-pane -U
+bind -n C-l select-pane -R
 
 # use prefix-hjkl to resize pane
 bind -r k resizep -U 3
@@ -43,8 +44,8 @@ set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=cyan]#
 
 
 # ------------------------------------- WINDOW ------------------------------------
-bind -T root M-[ previous-window
-bind -T root M-] next-window 
+bind -nr M-[ previous-window
+bind -nr M-] next-window 
 set-option -g base-index 1      # change window index to grow from 1
 set-option -g allow-rename off
 
@@ -76,6 +77,7 @@ bind-key    -T root       ª                 select-window -t :=9
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
