--- a/tmux.conf
+++ b/tmux.conf
@@ -13,10 +13,10 @@ unbind %
 bind | splitw -h # horizonal split with | 
 
 # select pane with alt+arrow 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
 
 # use Ctrl-hjkl to switch pane 
 bind -n C-h select-pane -L
