temp with airline-tabline

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,12 @@ set -ga terminal-overrides ",*256col*:Tc"
 TERM=xterm-256color
 
 set -g prefix C-s
+unbind C-b
+
 setw -g mode-keys vi
 set -g mouse on 
+
+set -g history-limit 10000
 
 # --------------------------------------- PANE ------------------------------------------
 unbind '"'
