--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,8 @@ unbind C-b
 setw -g mode-keys vi
 set -g mouse on 
 
+bind R source-file ~/.tmux.conf ; display-message "Config reloaded.."
+
 set -g history-limit 10000
 
 # --------------------------------------- PANE ------------------------------------------
@@ -82,6 +84,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore   'on'
+set -g @continuum-boot      'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
