refine tmux continuism

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,8 @@ set -g default-terminal "xterm-256color-italic"
 set -ga terminal-overrides ",*256col*:Tc"
 TERM=xterm-256color
 
+set-option -g default-shell /bin/zsh
+
 set -g prefix C-s
 unbind C-b
 
