--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ unbind C-b
 
 setw -g mode-keys vi
 set -g mouse on 
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"  
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 bind R source-file ~/.tmux.conf ; display-message "Config reloaded.."
 
@@ -40,14 +42,17 @@ bind -r l resizep -R 5
 
 # ----------------------------------- STATUS BAR -------------------------------------
 set-option -g status-justify right
-set -g status-right ' #[fg=magenta,bold]#S'
+set -g status-right ' #[fg=magenta,bold]#S    '
 set -g status-left "#[fg=cyan]#h #[default]#{pane_current_path} " 
 #set -g status-right ' #[fg=cyan,bold]*#[fg=magenta,bold]#S#[fg=cyan]* #[default]%Y-%m-%d'
+#set -g status-left '   #[fg=magenta,bold]#S    '
+#set -g status-right "#[fg=cyan]#h #[default]#{pane_current_path} " 
 set -g status-bg black
 set -g status-fg white
 set-option -g status-left-length 100
-set-window-option -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
-set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=cyan]#W#[fg=dim]'
+set-option -g status-right-length 100
+set-window-option -g window-status-format '    #[dim]#I:#[default]#W#[fg=grey,dim]    '
+set-window-option -g window-status-current-format '    #[fg=cyan,bold]#I:#[fg=cyan]#W#[fg=dim]    '
 
 
 
