update scripts and tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,11 +16,14 @@ bind R source-file ~/.tmux.conf ; display-message "Config reloaded.."
 
 set -g history-limit 10000
 
+bind X kill-window
+bind Z kill-session
+
 # --------------------------------------- PANE ------------------------------------------
 unbind '"'
-bind _ splitw -v # vertical split with _
+bind _ splitw -v -c "#{pane_current_path}"  # vertical split with _
 unbind %
-bind | splitw -h # horizonal split with | 
+bind | splitw -h -c "#{pane_current_path}"  # horizonal split with | 
 
 # select pane with alt+arrow 
 #bind -n M-Left select-pane -L
@@ -41,9 +44,10 @@ bind -r h resizep -L 5
 bind -r l resizep -R 5
 
 # ----------------------------------- STATUS BAR -------------------------------------
-set-option -g status-justify right
-set -g status-right ' #[fg=magenta,bold]#S    '
-set -g status-left "#[fg=cyan]#h #[default]#{pane_current_path} " 
+#set-option -g status-justify left
+#set -g status-right '                                         #[fg=magenta,bold]#S         '
+#set -g status-left '#[fg=cyan]#h #[default]#{pane_current_path} ' 
+#set -g status-left '#[fg=cyan]#h #[default]#(~/env/tmux_path.sh "#{pane_current_path}") '
 #set -g status-right ' #[fg=cyan,bold]*#[fg=magenta,bold]#S#[fg=cyan]* #[default]%Y-%m-%d'
 #set -g status-left '   #[fg=magenta,bold]#S    '
 #set -g status-right "#[fg=cyan]#h #[default]#{pane_current_path} " 
@@ -51,12 +55,24 @@ set -g status-bg black
 set -g status-fg white
 set-option -g status-left-length 100
 set-option -g status-right-length 100
-set-window-option -g window-status-format '    #[dim]#I:#[default]#W#[fg=grey,dim]    '
-set-window-option -g window-status-current-format '    #[fg=cyan,bold]#I:#[fg=cyan]#W#[fg=dim]    '
+#set-window-option -g window-status-format '    #[fg=grey,dim]#I:#[default]#[bold]#W#[default]    '
+set-window-option -g window-status-format           '    #[fg=colour245]#I:#W#[default]    '
+set-window-option -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
 
+set -g status 3
+set -g status-style bg=black
+set-option -g status-interval 3
+set -g status-format[0] '#[fg=brightred bold][#S]'
+set -g status-format[1] '#[align=centre]#{W:#{E:window-status-format} ,#{E:window-status-current-format} }'
+set -g status-format[2] '#[fg=cyan]#h  #[default]#{pane_current_path} '
+set -g status-format[0] '#[fg=brightred bold][#S]  #[default]#{pane_current_path} '
+set -g status-format[1] '#[align=centre]#{W:#{E:window-status-format} ,#{E:window-status-current-format} }'
+set -g status-format[2] '#[fg=cyan]#h  #[default]%H:%M'  #format="%%l:+%%c+%%t")'
+#set -g status-format[0] "#[align=left range=left #{status-left-style}]#{T;=/#{status-left-length}:status-left}#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-format}#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-current-format}#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#{T;=/#{status-right-length}:status-right}#[norange default]"
 
 
 # ------------------------------------- WINDOW ------------------------------------
+bind c new-window -c "#{pane_current_path}"
 bind -nr M-[ previous-window
 bind -nr M-] next-window 
 set-option -g base-index 1      # change window index to grow from 1
