--- a/tmux.conf
+++ b/tmux.conf
@@ -60,14 +60,19 @@ set-window-option -g window-status-format           '    #[fg=colour245]#I:#W#[d
 set-window-option -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
 
 set -g status 3
-set -g status-style bg=black
-set-option -g status-interval 3
-set -g status-format[0] '#[fg=brightred bold][#S]'
-set -g status-format[1] '#[align=centre]#{W:#{E:window-status-format} ,#{E:window-status-current-format} }'
-set -g status-format[2] '#[fg=cyan]#h  #[default]#{pane_current_path} '
-set -g status-format[0] '#[fg=brightred bold][#S]  #[default]#{pane_current_path} '
-set -g status-format[1] '#[align=centre]#{W:#{E:window-status-format} ,#{E:window-status-current-format} }'
-set -g status-format[2] '#[fg=cyan]#h  #[default]%H:%M'  #format="%%l:+%%c+%%t")'
+set -g status-style bg=black,fg=white
+set-option -g status-interval 20
+window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
+cyan_host="#[default]#[fg=cyan dim]#h"
+date_time="#[default]%a %h-%d %H:%M"
+time="#[default]%H:%M"
+weather="#[default]#(curl 'wttr.in/?m&format=1')"#"%%c:+%%t"')"
+prefix_sign="#[fg=default,bg=blue dim]  tmux  "
+if_prefix="#{?client_prefix,#{prefix_sign},}"
+session="#[fg=brightred bold]  [#S]  "
+set -g status-format[0] '  #{T:weather}   #{T:time} #{T:session}#[align=right]'#{T:if_prefix}'
+set -g status-format[1] '#[align=centre]#{T:window_list}'
+set -g status-format[2] '#{T:cyan_host} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
 #set -g status-format[0] "#[align=left range=left #{status-left-style}]#{T;=/#{status-left-length}:status-left}#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-format}#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-current-format}#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#{T;=/#{status-right-length}:status-right}#[norange default]"
 
 
