remove dim colour

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,7 +63,7 @@ set -g status 3
 set -g status-style bg=black,fg=white
 set-option -g status-interval 20
 window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
-cyan_host="#[default]#[fg=cyan dim]#h"
+cyan_host="#[default]#[fg=cyan]#h"
 date_time="#[default]%a %h-%d %H:%M"
 time="#[default]%H:%M"
 weather="#[default]#(curl 'wttr.in/?m&format=1')"#"%%c:+%%t"')"
