change tmux continuum to use iterm on Mac

--- a/tmux.conf
+++ b/tmux.conf
@@ -115,6 +115,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @continuum-restore   'on'
 set -g @continuum-boot      'on'
+set -g @continuum-boot-options 'iterm'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
