move configs into dirs

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -66,7 +66,7 @@ window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
 cyan_host="#[default]#[fg=cyan]#h"
 date_time="#[default]%a %h-%d %H:%M"
 time="#[default]%H:%M"
-weather="#[default]#(curl 'wttr.in/?m&format=1')"#"%%c:+%%t"')"
+weather="#[default]#(curl 'wttr.in/?m&format=1' | head -1)"#"%%c:+%%t"')"
 prefix_sign="#[fg=default,bg=blue dim]  tmux  "
 if_prefix="#{?client_prefix,#{prefix_sign},}"
 session="#[fg=brightred bold]  [#S]  "
