--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -64,6 +64,7 @@ set -g status-style bg=black,fg=white
 set-option -g status-interval 5
 window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
 cyan_host="#[default]#[fg=cyan]#h"
+cyan_user="#[default]#[fg=cyan]#(echo $USER)"
 date_time="#[default]%a %h-%d %H:%M"
 time="#[default]%H:%M"
 weather="#[default]#(curl 'wttr.in/?m&format=1' | head -1)"#"%%c:+%%t"')"
@@ -72,7 +73,8 @@ if_prefix="#{?client_prefix,#{prefix_sign},}"
 session="#[fg=brightred bold]  [#S]  "
 set -g status-format[0] '  #{T:weather}   #{T:time} #{T:session}#[align=right]'#{T:if_prefix}'
 set -g status-format[1] '#[align=centre]#{T:window_list}'
-set -g status-format[2] '#{T:cyan_host} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
+set -g status-format[2] '#{T:cyan_user} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
+#set -g status-format[2] '#{T:cyan_host} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
 #set -g status-format[0] "#[align=left range=left #{status-left-style}]#{T;=/#{status-left-length}:status-left}#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-format}#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-current-format}#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#{T;=/#{status-right-length}:status-right}#[norange default]"
 
 
