ubuntu fix and update

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -64,14 +64,14 @@ set -g status-style bg=black,fg=white
 set-option -g status-interval 5
 window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
 cyan_host="#[default]#[fg=cyan]#h"
-cyan_user="#[default]#[fg=cyan]#(echo $USER)"
+cyan_user="#[default]#[fg=cyan bold]#(echo $USER)"
 date_time="#[default]%a %h-%d %H:%M"
 time="#[default]%H:%M"
-weather="#[default]#(curl 'wttr.in/?m&format=1' | head -1)"#"%%c:+%%t"')"
+weather="#[default]#(curl 'wttr.in/?m&format=1' | head -1)"
 prefix_sign="#[fg=default,bg=blue dim]  tmux  "
 if_prefix="#{?client_prefix,#{prefix_sign},}"
 session="#[fg=brightred bold]  [#S]  "
-set -g status-format[0] '  #{T:weather}   #{T:time} #{T:session}#[align=right]'#{T:if_prefix}'
+set -g status-format[0] '  #{T:weather}   #{T:time} #{T:session}#[align=right]'
 set -g status-format[1] '#[align=centre]#{T:window_list}'
 set -g status-format[2] '#{T:cyan_user} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
 #set -g status-format[2] '#{T:cyan_host} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
