Nesting tmux sessions

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,7 +2,7 @@ set -g default-terminal "xterm-256color-italic"
 set -ga terminal-overrides ",*256col*:Tc"
 TERM=xterm-256color
 
-set-option -g default-shell /bin/zsh
+set -g default-shell /bin/zsh
 
 set -g prefix C-s
 unbind C-b
@@ -43,7 +43,15 @@ bind -r j resizep -D 3
 bind -r h resizep -L 5
 bind -r l resizep -R 5
 
+# ------------------------------ COLORS ----------------------------
+color_blue="colour39"
+color_black="colour235"
+color_orange="colour208"
+color_cyan="colour38"
+
 # ----------------------------------- STATUS BAR -------------------------------------
+
+# Deprecated Oneline Status Bar
 #set-option -g status-justify left
 #set -g status-right '                                         #[fg=magenta,bold]#S         '
 #set -g status-left '#[fg=cyan]#h #[default]#{pane_current_path} ' 
@@ -51,62 +59,72 @@ bind -r l resizep -R 5
 #set -g status-right ' #[fg=cyan,bold]*#[fg=magenta,bold]#S#[fg=cyan]* #[default]%Y-%m-%d'
 #set -g status-left '   #[fg=magenta,bold]#S    '
 #set -g status-right "#[fg=cyan]#h #[default]#{pane_current_path} " 
-set -g status-bg black
-set -g status-fg white
-set-option -g status-left-length 100
-set-option -g status-right-length 100
+# set-option -g status-left-length 100
+# set-option -g status-right-length 100
 #set-window-option -g window-status-format '    #[fg=grey,dim]#I:#[default]#[bold]#W#[default]    '
-set-window-option -g window-status-format           '    #[fg=colour245]#I:#W#[default]    '
-set-window-option -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
+# set-window-option -g window-status-format           '    #[fg=colour245]#I:#W#[default]    '
+# set-window-option -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
 
 set -g status 3
-set -g status-style bg=black,fg=white
-set-option -g status-interval 5
+set -g status-style bg=$color_black,fg=white
+set -g status-interval 5
+
 window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
-cyan_host="#[default]#[fg=cyan]#h"
-cyan_user="#[default]#[fg=cyan bold]#(echo $USER)"
+blue_host="#[default, fg=$color_blue]#h"
+cyan_user="#[default, fg=$color_cyan]#(echo $USER)"
 date_time="#[default]%a %h-%d %H:%M"
 time="#[default]%H:%M"
 weather="#[default]#(curl 'wttr.in/?m&format=1' | head -1)"
-prefix_sign="#[fg=default,bg=blue dim]  tmux  "
+prefix_sign="#[fg=default, bg=blue dim]  tmux  "
 if_prefix="#{?client_prefix,#{prefix_sign},}"
 session="#[fg=brightred bold]  [#S]  "
-set -g status-format[0] '  #{T:weather}   #{T:time} #{T:session}#[align=right]'
-set -g status-format[1] '#[align=centre]#{T:window_list}'
-set -g status-format[2] '#{T:cyan_user} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
-#set -g status-format[2] '#{T:cyan_host} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  #format="%%l:+%%c+%%t")'
-#set -g status-format[0] "#[align=left range=left #{status-left-style}]#{T;=/#{status-left-length}:status-left}#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-format}#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#{T:window-status-current-format}#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#{T;=/#{status-right-length}:status-right}#[norange default]"
+locked_session="#[fg=$color_orange]   #S"
 
+status_info='  #{T:weather}   #{T:time} #{T:session} #[align=right]'
+status_window='#[align=centre]#{T:window_list}'
+status_user='#{T:cyan_user} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  
+status_locked='  #{T:weather}   #{T:time} #{T:locked_session} #[align=right]#{T:blue_host}    #[fg=default]🔒   '
+
+set -g status-format[0] $status_info
+set -g status-format[1] $status_window
+set -g status-format[2] $status_user
+
+# ------------------------------- Nested Remote Session ----------------------------
+bind -T root M-0 \
+    set prefix None \;\
+    set key-table nested \;\
+    set status on \;\
+    set status-format[0] $status_locked \;\
+    refresh-client -S \;\
+
+bind -T nested M-0 \
+  set -u prefix \;\
+  set -u key-table \;\
+  set -u status \;\
+  set status-format[0] $status_info \;\
+  refresh-client -S \;\
+
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file ~/.tmux/tmux.remote.conf'
 
 # ------------------------------------- WINDOW ------------------------------------
 bind c new-window -c "#{pane_current_path}"
 bind -nr M-[ previous-window
 bind -nr M-] next-window 
-set-option -g base-index 1      # change window index to grow from 1
-set-option -g allow-rename off
+set -g base-index 1      # change window index to grow from 1
+set -g allow-rename off
 
 # Alt+number to switch to window 
-bind-key    -T root       M-0                 select-window -t :=0
-bind-key    -T root       M-1                 select-window -t :=1
-bind-key    -T root       M-2                 select-window -t :=2
-bind-key    -T root       M-3                 select-window -t :=3
-bind-key    -T root       M-4                 select-window -t :=4
-bind-key    -T root       M-5                 select-window -t :=5
-bind-key    -T root       M-6                 select-window -t :=6
-bind-key    -T root       M-7                 select-window -t :=7
-bind-key    -T root       M-8                 select-window -t :=8
-bind-key    -T root       M-9                 select-window -t :=9
-# MacOS alt chars 
-bind-key    -T root       º                 select-window -t :=0
-bind-key    -T root       ¡                 select-window -t :=1
-bind-key    -T root       ™                 select-window -t :=2
-bind-key    -T root       £                 select-window -t :=3
-bind-key    -T root       ¢                 select-window -t :=4
-bind-key    -T root       ∞                 select-window -t :=5
-bind-key    -T root       §                 select-window -t :=6
-bind-key    -T root       ¶                 select-window -t :=7
-bind-key    -T root       •                 select-window -t :=8
-bind-key    -T root       ª                 select-window -t :=9
+# bind    -T root       M-0                 select-window -t :=0
+bind    -T root       M-1                 select-window -t :=1
+bind    -T root       M-2                 select-window -t :=2
+bind    -T root       M-3                 select-window -t :=3
+bind    -T root       M-4                 select-window -t :=4
+bind    -T root       M-5                 select-window -t :=5
+bind    -T root       M-6                 select-window -t :=6
+bind    -T root       M-7                 select-window -t :=7
+bind    -T root       M-8                 select-window -t :=8
+bind    -T root       M-9                 select-window -t :=9
 
 # ------------------------------ PLUGINS ------------------------------
 # List of plugins
