tmux fix remote

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -48,6 +48,12 @@ color_blue="colour39"
 color_black="colour235"
 color_orange="colour208"
 color_cyan="colour38"
+color_grey="colour245"
+color_pink="colour225"
+color_black_light="colour236"
+
+
+color_remote_bg=$color_black_light
 
 # ----------------------------------- STATUS BAR -------------------------------------
 
@@ -62,13 +68,13 @@ color_cyan="colour38"
 # set-option -g status-left-length 100
 # set-option -g status-right-length 100
 #set-window-option -g window-status-format '    #[fg=grey,dim]#I:#[default]#[bold]#W#[default]    '
-# set-window-option -g window-status-format           '    #[fg=colour245]#I:#W#[default]    '
-# set-window-option -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
 
 set -g status 3
 set -g status-style bg=$color_black,fg=white
 set -g status-interval 5
 
+set-window-option -g window-status-format           '    #[fg=colour245]#I:#W#[default]    '
+set-window-option -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
 window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
 blue_host="#[default, fg=$color_blue]#h"
 cyan_user="#[default, fg=$color_cyan]#(echo $USER)"
