--- a/dotfiles/tmux.remote.conf
+++ b/dotfiles/tmux.remote.conf
@@ -1,3 +1,7 @@
+status_remote='#{T:session}#{T:cyan_user}  #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  
 set -g status 2
-set -g status-format[0] $status_user
+set -g status-style bg=$color_black,fg=white
+set -g status-format[0] $status_remote
 set -g status-format[1] $status_window
+set -u status-format[2]
+display-message "remote config loaded"
