fix tmux local status bar

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -73,8 +73,9 @@ set -g status 3
 set -g status-style bg=$color_black,fg=white
 set -g status-interval 5
 
-set-window-option -g window-status-format           '    #[fg=colour245]#I:#W#[default]    '
-set-window-option -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
+setw -g window-status-format           '    #[fg=colour245]#I:#W#[default]    '
+setw -g window-status-current-format   '    #[default]#[fg=white]#I:#[fg=colour225 bold]#W#[default]    '
+
 window_list="#{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
 blue_host="#[default, fg=$color_blue]#h"
 cyan_user="#[default, fg=$color_cyan]#(echo $USER)"
@@ -108,6 +109,8 @@ bind -T nested M-0 \
   set -u key-table \;\
   set -u status \;\
   set status-format[0] $status_info \;\
+  set status-format[1] $status_window \;\
+  set status-format[2] $status_user \;\
   refresh-client -S \;\
 
 if-shell 'test -n "$SSH_CLIENT"' \
