test tmux remote switching

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -102,6 +102,7 @@ bind -T root M-0 \
     set key-table nested \;\
     set status on \;\
     set status-format[0] $status_locked \;\
+    send-keys M-b \;\
     refresh-client -S \;\
 
 bind -T nested M-0 \
@@ -111,6 +112,7 @@ bind -T nested M-0 \
   set status-format[0] $status_info \;\
   set status-format[1] $status_window \;\
   set status-format[2] $status_user \;\
+  send-keys M-a \;\
   refresh-client -S \;\
 
 if-shell 'test -n "$SSH_CLIENT"' \
