--- a/dotfiles/tmux.remote.conf
+++ b/dotfiles/tmux.remote.conf
@@ -1,6 +1,19 @@
 status_remote='#{T:session}#{T:cyan_user}  #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  
-set -g status 2
-set -g status-style bg=$color_black,fg=white
-set -g status-format[0] $status_remote
+status_remote_locked='#[align=right]#{T:blue_host}    #[fg=default]🔒   '
+set -g status 3
+set -g status-style bg=$color_black_light,fg=white
+set -g status-format[0] $status_info
 set -g status-format[1] $status_window
-display-message "remote config loaded"
+set -g status-format[2] $status_user
+
+bind -n M-a \
+    set -g status on \;\
+    set -g status-format[0] $status_remote_locked \;\
+    refresh-client -S \;\
+
+bind -n M-b \
+    set -g status 3 \;\
+    set -g status-format[0] $status_info \;\
+    set -g status-format[1] $status_window \;\
+    set -g status-format[2] $status_user \;\
+    refresh-client -S \;\
