--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -85,11 +85,12 @@ weather="#[default]#(curl 'wttr.in/?m&format=1' | head -1)"
 prefix_sign="#[fg=default, bg=blue dim]  tmux  "
 if_prefix="#{?client_prefix,#{prefix_sign},}"
 session="#[fg=brightred bold]  [#S]  "
-locked_session="#[fg=$color_orange]   #S"
+locked_session="#[fg=$color_orange]  [#S]"
+public_ip="#[default]#(curl ip.me)"
 
 status_info='  #{T:weather}   #{T:time} #{T:session} #[align=right]'
 status_window='#[align=centre]#{T:window_list}'
-status_user='#{T:cyan_user} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  
+status_user=' #{T:cyan_user} #[fg=colour254]#{pane_current_path} #[align=right]#{T:if_prefix}'  
 status_locked='  #{T:weather}   #{T:time} #{T:locked_session} #[align=right]#{T:blue_host}    #[fg=default]🔒   '
 
 set -g status-format[0] $status_info
@@ -103,7 +104,7 @@ bind -T root M-0 \
     set status on \;\
     set status-format[0] $status_locked \;\
     send-keys M-b \;\
-    refresh-client -S \;\
+    refresh-client -S
 
 bind -T nested M-0 \
   set -u prefix \;\
@@ -113,7 +114,7 @@ bind -T nested M-0 \
   set status-format[1] $status_window \;\
   set status-format[2] $status_user \;\
   send-keys M-a \;\
-  refresh-client -S \;\
+  refresh-client -S
 
 if-shell 'test -n "$SSH_CLIENT"' \
     'source-file ~/.tmux/tmux.remote.conf'
