add session shortcut

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -103,7 +103,7 @@ bind -T root M-0 \
     set key-table nested \;\
     set status on \;\
     set status-format[0] $status_locked \;\
-    send-keys M-b \;\
+    send-keys M-j \;\
     refresh-client -S
 
 bind -T nested M-0 \
@@ -113,8 +113,11 @@ bind -T nested M-0 \
   set status-format[0] $status_info \;\
   set status-format[1] $status_window \;\
   set status-format[2] $status_user \;\
-  send-keys M-a \;\
+  send-keys M-k \;\
   refresh-client -S
+
+bind -T nested M-l choose-tree -Zs
+bind -T root   M-l choose-tree -Zs
 
 if-shell 'test -n "$SSH_CLIENT"' \
     'source-file ~/.tmux/tmux.remote.conf'
@@ -136,7 +139,7 @@ bind    -T root       M-5                 select-window -t :=5
 bind    -T root       M-6                 select-window -t :=6
 bind    -T root       M-7                 select-window -t :=7
 bind    -T root       M-8                 select-window -t :=8
-bind    -T root       M-9                 select-window -t :=9
+# bind    -T root       M-9                 select-window -t :=9
 
 # ------------------------------ PLUGINS ------------------------------
 # List of plugins
