--- a/dotfiles/tmux.remote.conf
+++ b/dotfiles/tmux.remote.conf
@@ -7,12 +7,12 @@ set -g status-format[0] $status_remote_info
 set -g status-format[1] $status_window
 set -g status-format[2] $status_user
 
-bind -n M-a \
+bind -n M-j \
     set -g status on \;\
     set -g status-format[0] $status_remote_locked \;\
     refresh-client -S
 
-bind -n M-b \
+bind -n M-k \
     set -g status 3 \;\
     set -g status-format[0] $status_remote_info \;\
     set -g status-format[1] $status_window \;\
