add rename after new window

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -124,8 +124,11 @@ if-shell 'test -n "$SSH_CLIENT"' \
 
 # ------------------------------------- WINDOW ------------------------------------
 bind c new-window -c "#{pane_current_path}"
-bind -nr M-[ previous-window
-bind -nr M-] next-window 
+# Prompt to rename window right after it's created
+set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
+
+bind -n M-[ previous-window
+bind -n M-] next-window 
 set -g base-index 1      # change window index to grow from 1
 set -g allow-rename off
 
