change remote status interval

--- a/dotfiles/tmux.remote.conf
+++ b/dotfiles/tmux.remote.conf
@@ -2,6 +2,7 @@ status_remote='#{T:session}#{T:cyan_user}  #[fg=colour254]#{pane_current_path} #
 status_remote_locked='  #{T:public_ip} #{T:locked_session}#[align=right]#{T:blue_host}    #[fg=default]🔒   '
 status_remote_info='  #{T:public_ip} #{T:session}'
 set -g status 3
+set -g status-interval 15
 set -g status-style bg=$color_black_light,fg=white
 set -g status-format[0] $status_remote_info
 set -g status-format[1] $status_window
